--- a/pt/web/alicorn/src/scss/app.scss
+++ b/pt/web/alicorn/src/scss/app.scss
@@ -2067,30 +2067,35 @@ body[data-expanded="false"] {
 main[data-view="1up"] {
   button[data-target="1up"] {
     background: rgba(0,0,0,0.8);
+    color: #eee;
   }
 }
 
 main[data-view="2up"] {
   button[data-target="2up"] {
     background: rgba(0,0,0,0.8);
+    color: #eee;
   }
 }
 
 main[data-view="image"] {
   button[data-target="image"] {
     background: rgba(0,0,0,0.8);
+    color: #eee;
   }
 }
 
 main[data-view="plaintext"] {
   button[data-target="plaintext"] {
     background: rgba(0,0,0,0.8);
+    color: #eee;
   }
 }
 
 main[data-view="thumb"] {
   button[data-target="thumb"] {
     background: rgba(0,0,0,0.8);
+    color: #eee;
   }
 }
 
